# rossoc.github.io

./: .gitignore  Cargo.toml  README.md  index.html  transcript.typ
.github/workflows/: rust-builder.yml  static.yml
MLA/: ha3.html  help-me-please.md  home-assignment3.md  index.html  index.md  math_formula.html  math_formula.md
assets/css/: about-me-sidebar.css  header.css  note-sidebar.css  portfolio.css  (+3 more)
layout/: footer.html  head.html  list.html  navbar.html  note-0.1.html  note-bottom.html  note-list.html  note-navbar.html  note-sidebar.html  note.html  page.html  plain.html  portfolio-list.html  portfolio-navbar.html  portfolio-sidebar.html  portfolio.html  preview.html  recursive.html  short-note-bottom.html  sidebar.html  theme-button.html
notes/: MoMos2D.md  ai-workshop.typ  biblio.bib  copenhagen_guide.md  excel-notes.typ  github.typ  open_sourc.md  open_source.md  open_source_essay.typ  open_source_ita.md  readme.md  useful-commands.md
portfolio/: about_me.md  experience.md  projects.md  readme.md
preview/: about_me.html  about_me.md  curriculum_vitae.html  curriculum_vitae.md  github.md  home.md  index.html  index.md  new.md  nmr.md  notes.html  notes.md  open_source.html  open_source_2.html  open_source_2.md  open_source_essay.typ  open_source_presentation.html  open_source_presentation.md  pilus.md  prolactin_receptor.md  thesis.html  thesis.md
projects/: index.md
script/: Cargo.toml  README.md
src/: args.rs  compile.rs  error.rs  file_walker.rs  main.rs  md_to_html.rs  parser.rs  serve.rs  watcher.rs
todo/: index.html  index.md
(+19 files in other folders)
