[package]
name = "Logbook"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
chrono = "0.4.31"
notify = "8.0.0"
pulldown-cmark = "0.9.3"
rand = "0.9.0"
regex = "1.11.1"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
